--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "rimraf": "^2.7.1",
     "ts-node": "^10.0.0",
     "type-fest": "^0.20.2",
-    "yargs": "17.2.1"
+    "yargs": "17.2.1",
+    "fs-extra": "^9.0.1"
   },
   "scripts": {
     "clean": "lerna run clean && rimraf node_modules",
