Bundle examples with webpack
This makes sure that they are available during runtime.
Use _dirname instead of module.path as the latter doesn't work.
Delete generated *.gz files after webpack build.
Also bundle examples with the electron-builder for the AppImage.

Contributed on behalf of STMicroelectronics

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,8 @@
 tracecompass-server
 nohup.out
 
+applications/**/resources/clangd-contexts
+applications/**/resources/cmake-example
+applications/**/resources/example-traces
+
 **/workspace
