--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.14",
     "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6"
+    "@types/react-dom": "^18.0.6",
+    "remove-files-webpack-plugin": "^1.5.0"
   },
   "devDependencies": {
     "@theia/cli": "1.40.1",
