--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "clean": "lerna run clean && rimraf node_modules",
     "build": "yarn build:extensions && yarn build:applications",
     "build:dev": "yarn build:extensions && yarn build:applications:dev",
-    "build:applications": "yarn build:extensions && lerna run --scope=\"cdt-cloud-blueprint*app\" build:prod --concurrency 1",
-    "build:applications:dev": "yarn build:extensions && lerna run --scope=\"cdt-cloud-blueprint*app\" build --concurrency 1",
+    "build:applications": "lerna run --scope=\"cdt-cloud-blueprint*app\" build:prod --concurrency 1",
+    "build:applications:dev": "lerna run --scope=\"cdt-cloud-blueprint*app\" build --concurrency 1",
     "build:extensions": "lerna run --scope=\"cdt-cloud-blueprint*ext\" --scope=\"@eclipse-cdt-cloud/*\" build",
     "download:plugins": "theia download:plugins --rate-limit=15 --parallel=false --ignore-errors",
     "package:applications": "yarn tracecompass-server:download && lerna run --scope=\"cdt-cloud-blueprint*app\" package --concurrency 1",
@@ -74,7 +74,8 @@
     "lint": "eslint --ext js,jsx,ts,tsx scripts && lerna run lint",
     "lint:fix": "eslint --ext js,jsx,ts,tsx scripts --fix && lerna run lint:fix",
     "tracecompass-server:download": "ts-node scripts/tracecompass-server-download.ts",
-    "tracecompass-server:start": "yarn tracecompass-server:download && ts-node scripts/tracecompass-server.ts"
+    "tracecompass-server:start": "yarn tracecompass-server:download && ts-node scripts/tracecompass-server.ts",
+    "setup": "yarn && yarn build:extensions && yarn download:plugins && yarn tracecompass-server:download"
   },
   "theiaPluginsDir": "plugins",
   "theiaPlugins": {
