Build Theia IDE Docker Image for ARM as well #338
* also update used action versions to SHA instead of tags

Contributed on behalf of STMicroelectronics

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Test (Linux)
         if: matrix.tests != 'skip' && runner.os == 'Linux'
-        uses: GabrielBB/xvfb-action@v1
+        uses: GabrielBB/xvfb-action@86d97bde4a65fe9b290c0b3fb92c2c4ed0e5302d #1.6
         with:
           run: yarn electron test
 
