fix: remove env variable workaround to define configuration area
fixes #393

contributed on behalf of STMicroelectronics

Signed-off-by: Remi Schnekenburger <rschnekenburger@eclipsesource.com>

--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -34,7 +34,8 @@
       "config": {
         "warnOnPotentiallyInsecureHostPattern": false,
         "startupTimeout": -1,
-        "resolveSystemPlugins": false
+        "resolveSystemPlugins": false,
+        "configurationFolder": ".theia-ide"
       }
     },
     "generator": {
