--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -43,7 +43,8 @@
       "config": {
         "frontendConnectionTimeout": -1,
         "startupTimeout": -1,
-        "resolveSystemPlugins": false
+        "resolveSystemPlugins": false,
+        "configurationFolder": ".theia-ide"
       }
     },
     "generator": {
