--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -123,7 +123,7 @@
     "app-builder-lib": "24.13.2",
     "chai": "^4.3.10",
     "concurrently": "^3.5.0",
-    "electron": "^30.1.2",
+    "electron": "30.1.2",
     "electron-builder": "24.13.2",
     "electron-chromedriver": "^28.2.8",
     "electron-mocha": "^12.3.0",
