--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -3,7 +3,7 @@
   "name": "theia-ide-browser-app",
   "description": "Eclipse Theia IDE browser product",
   "productName": "Theia IDE",
-  "version": "1.56.0",
+  "version": "1.56.1",
   "license": "MIT",
   "author": "Eclipse Theia <theia-dev@eclipse.org>",
   "homepage": "https://github.com/eclipse-theia/theia-ide#readme",
@@ -50,6 +50,7 @@
     "@theia/ai-code-completion": "1.56.0",
     "@theia/ai-core": "1.56.0",
     "@theia/ai-history": "1.56.0",
+    "@theia/ai-huggingface": "1.56.0",
     "@theia/ai-llamafile": "1.56.0",
     "@theia/ai-ollama": "1.56.0",
     "@theia/ai-openai": "1.56.0",
@@ -98,7 +99,7 @@
     "@theia/vsx-registry": "1.56.0",
     "@theia/workspace": "1.56.0",
     "fs-extra": "^9.0.1",
-    "theia-ide-product-ext": "1.56.0"
+    "theia-ide-product-ext": "1.56.1"
   },
   "devDependencies": {
     "@theia/cli": "1.56.0"
