--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -3,7 +3,7 @@
   "name": "theia-ide-electron-app",
   "description": "Eclipse Theia IDE product",
   "productName": "Theia IDE",
-  "version": "1.56.0",
+  "version": "1.56.1",
   "main": "scripts/theia-electron-main.js",
   "license": "MIT",
   "author": "Eclipse Theia <theia-dev@eclipse.org>",
@@ -59,6 +59,7 @@
     "@theia/ai-code-completion": "1.56.0",
     "@theia/ai-core": "1.56.0",
     "@theia/ai-history": "1.56.0",
+    "@theia/ai-huggingface": "1.56.0",
     "@theia/ai-llamafile": "1.56.0",
     "@theia/ai-ollama": "1.56.0",
     "@theia/ai-openai": "1.56.0",
@@ -108,9 +109,9 @@
     "@theia/vsx-registry": "1.56.0",
     "@theia/workspace": "1.56.0",
     "fs-extra": "^9.0.1",
-    "theia-ide-launcher-ext": "1.56.0",
-    "theia-ide-product-ext": "1.56.0",
-    "theia-ide-updater-ext": "1.56.0"
+    "theia-ide-launcher-ext": "1.56.1",
+    "theia-ide-product-ext": "1.56.1",
+    "theia-ide-updater-ext": "1.56.1"
   },
   "devDependencies": {
     "@theia/cli": "1.56.0",
