Fix perfect-scrollbar to 1.5.5
Increase version to 1.56.2

Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "1.56.1",
+  "version": "1.56.2",
   "license": "MIT",
   "author": "Rob Moran <github@thegecko.org>",
   "homepage": "https://github.com/eclipse-theia/theia-ide#readme",
@@ -80,6 +80,7 @@
     "@yarnpkg/parsers": "3.0.0-rc.44",
     "**/multer": "1.4.4-lts.1",
     "**/nan": "2.20.0",
-    "**/cpu-features": "0.0.9"
+    "**/cpu-features": "0.0.9",
+    "**/perfect-scrollbar": "1.5.5"
   }
 }
