fix: improve connection settings in browser application
Configures 'reloadOnReconnect' and 'frontendConnectionTimeout' in the
browser application to improve the user experience.

Resolves https://github.com/eclipse-theia/theia/issues/14516

--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -27,7 +27,8 @@
           "toolbar.showToolbar": true,
           "files.enableTrash": false,
           "security.workspace.trust.enabled": false
-        }
+        },
+        "reloadOnReconnect": true
       }
     },
     "backend": {
@@ -35,7 +36,8 @@
         "warnOnPotentiallyInsecureHostPattern": false,
         "startupTimeout": -1,
         "resolveSystemPlugins": false,
-        "configurationFolder": ".theia-ide"
+        "configurationFolder": ".theia-ide",
+        "frontendConnectionTimeout": 3000
       }
     },
     "generator": {
