Mac Builds for 'x64' + 'arm64'
* since we only have x64 node in Eclipse CI we will build for x64 and
arm64 on Github runners
* Zipped dist directories will be made available to the Jenkins build
via a Github pre-release
* Zips will be produced by verification Job for now
* adjusts the Jenkinsbuild to get the zips from the pre-release, unpack
the dmg, sign the files, repack, and continue build as before
* add a new location on download.eclipse.org for mac arm builds (the
latest file is called the same for both mac archs, so we need two
locations for updates)
* enable tests for arm

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, ubuntu-22.04, macos-13]
+        os: [windows-2019, ubuntu-22.04, macos-13, macos-14] # macOS-13 is for x64, macOS-14 is for arm64
         node: ['20.x']
 
     runs-on: ${{ matrix.os }}
@@ -42,7 +42,8 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Build and package
+      - name: Build and package (Windows, Linux)
+        if: runner.os == 'Windows' || runner.os == 'Linux'
         shell: bash
         run: |
           yarn --skip-integrity-check --network-timeout 100000
@@ -52,6 +53,34 @@ jobs:
         env:
           NODE_OPTIONS: --max_old_space_size=4096
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
+
+      - name: Update electron-builder.yml for macOS-14
+        if: matrix.os == 'macos-14'
+        run: |
+          sed -i '' 's|https://download.eclipse.org/theia/ide/latest/macos|https://download.eclipse.org/theia/ide/latest/macos-arm|g' applications/electron/electron-builder.yml
+
+      - name: Build and package (Mac)
+        if: runner.os == 'macOS'
+        shell: bash
+        run: |
+          yarn --skip-integrity-check --network-timeout 100000
+          yarn build
+          yarn download:plugins
+          yarn package:applications
+        env:
+          NODE_OPTIONS: --max_old_space_size=4096
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
+
+      - name: Upload Mac Dist Files
+        if: runner.os == 'macOS'
+        uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 #4.6.1
+        with:
+          name: ${{ matrix.os == 'macos-13' && 'mac-x64' || matrix.os == 'macos-14' && 'mac-arm64'}}
+          path: |
+            applications/electron/dist/**
+            !applications/electron/dist/mac/**
+            !applications/electron/dist/mac-arm64/**
+          retention-days: 1
 
       - name: Test (Linux)
         if: matrix.tests != 'skip' && runner.os == 'Linux'
