--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "**/multer": "1.4.4-lts.1",
     "**/nan": "2.20.0",
     "**/cpu-features": "0.0.9",
-    "**/perfect-scrollbar": "1.5.5"
+    "**/perfect-scrollbar": "1.5.5",
+    "**/node-abi": "3.71.0"
   }
 }
