--- a/theia-extensions/launcher/package.json
+++ b/theia-extensions/launcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "theia-ide-launcher-ext",
-  "version": "1.59.2",
+  "version": "1.60.0",
   "keywords": [
     "theia-extension"
   ],
@@ -18,7 +18,7 @@
     "src"
   ],
   "dependencies": {
-    "@theia/core": "1.59.0",
+    "@theia/core": "1.60.0-next.43+2a13720d2",
     "@vscode/sudo-prompt": "9.3.1",
     "body-parser": "^1.17.2",
     "fs-extra": "^4.0.2"
