--- a/theia-extensions/product/package.json
+++ b/theia-extensions/product/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
   "name": "theia-ide-product-ext",
-  "version": "1.59.2",
+  "version": "1.60.0",
   "description": "Eclipse Theia IDE Product Branding",
   "dependencies": {
-    "@theia/core": "1.59.0",
-    "@theia/getting-started": "1.59.0",
-    "@theia/vsx-registry": "1.59.0",
-    "@theia/workspace": "1.59.0",
+    "@theia/core": "1.60.0-next.43+2a13720d2",
+    "@theia/getting-started": "1.60.0-next.43+2a13720d2",
+    "@theia/vsx-registry": "1.60.0-next.43+2a13720d2",
+    "@theia/workspace": "1.60.0-next.43+2a13720d2",
     "inversify": "^6.0.1"
   },
   "devDependencies": {
