--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -3,7 +3,7 @@
   "name": "theia-ide-browser-app",
   "description": "Eclipse Theia IDE browser product",
   "productName": "Theia IDE",
-  "version": "1.59.2",
+  "version": "1.60.0",
   "license": "MIT",
   "author": "Eclipse Theia <theia-dev@eclipse.org>",
   "homepage": "https://github.com/eclipse-theia/theia-ide#readme",
@@ -47,68 +47,68 @@
     }
   },
   "dependencies": {
-    "@theia/ai-anthropic": "1.59.0",
-    "@theia/ai-chat": "1.59.0",
-    "@theia/ai-chat-ui": "1.59.0",
-    "@theia/ai-code-completion": "1.59.0",
-    "@theia/ai-core": "1.59.0",
-    "@theia/ai-history": "1.59.0",
-    "@theia/ai-huggingface": "1.59.0",
-    "@theia/ai-ide": "1.59.0",
-    "@theia/ai-llamafile": "1.59.0",
-    "@theia/ai-mcp": "1.59.0",
-    "@theia/ai-ollama": "1.59.0",
-    "@theia/ai-openai": "1.59.0",
-    "@theia/ai-scanoss": "1.59.0",
-    "@theia/ai-terminal": "1.59.0",
-    "@theia/bulk-edit": "1.59.0",
-    "@theia/callhierarchy": "1.59.0",
-    "@theia/collaboration": "1.59.0",
-    "@theia/console": "1.59.0",
-    "@theia/core": "1.59.0",
-    "@theia/debug": "1.59.0",
-    "@theia/dev-container": "1.59.0",
-    "@theia/editor": "1.59.0",
-    "@theia/editor-preview": "1.59.0",
-    "@theia/external-terminal": "1.59.0",
-    "@theia/file-search": "1.59.0",
-    "@theia/filesystem": "1.59.0",
-    "@theia/getting-started": "1.59.0",
-    "@theia/keymaps": "1.59.0",
-    "@theia/markers": "1.59.0",
-    "@theia/memory-inspector": "1.59.0",
-    "@theia/messages": "1.59.0",
-    "@theia/metrics": "1.59.0",
-    "@theia/mini-browser": "1.59.0",
-    "@theia/monaco": "1.59.0",
-    "@theia/navigator": "1.59.0",
-    "@theia/outline-view": "1.59.0",
-    "@theia/output": "1.59.0",
-    "@theia/plugin-dev": "1.59.0",
-    "@theia/plugin-ext": "1.59.0",
-    "@theia/plugin-ext-vscode": "1.59.0",
-    "@theia/preferences": "1.59.0",
-    "@theia/process": "1.59.0",
-    "@theia/property-view": "1.59.0",
-    "@theia/remote": "1.59.0",
-    "@theia/scm": "1.59.0",
-    "@theia/search-in-workspace": "1.59.0",
-    "@theia/secondary-window": "1.59.0",
-    "@theia/task": "1.59.0",
-    "@theia/terminal": "1.59.0",
-    "@theia/timeline": "1.59.0",
-    "@theia/toolbar": "1.59.0",
-    "@theia/typehierarchy": "1.59.0",
-    "@theia/userstorage": "1.59.0",
-    "@theia/variable-resolver": "1.59.0",
-    "@theia/vsx-registry": "1.59.0",
-    "@theia/workspace": "1.59.0",
+    "@theia/ai-anthropic": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-chat": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-chat-ui": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-code-completion": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-core": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-history": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-huggingface": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-ide": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-llamafile": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-mcp": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-ollama": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-openai": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-scanoss": "1.60.0-next.43+2a13720d2",
+    "@theia/ai-terminal": "1.60.0-next.43+2a13720d2",
+    "@theia/bulk-edit": "1.60.0-next.43+2a13720d2",
+    "@theia/callhierarchy": "1.60.0-next.43+2a13720d2",
+    "@theia/collaboration": "1.60.0-next.43+2a13720d2",
+    "@theia/console": "1.60.0-next.43+2a13720d2",
+    "@theia/core": "1.60.0-next.43+2a13720d2",
+    "@theia/debug": "1.60.0-next.43+2a13720d2",
+    "@theia/dev-container": "1.60.0-next.43+2a13720d2",
+    "@theia/editor": "1.60.0-next.43+2a13720d2",
+    "@theia/editor-preview": "1.60.0-next.43+2a13720d2",
+    "@theia/external-terminal": "1.60.0-next.43+2a13720d2",
+    "@theia/file-search": "1.60.0-next.43+2a13720d2",
+    "@theia/filesystem": "1.60.0-next.43+2a13720d2",
+    "@theia/getting-started": "1.60.0-next.43+2a13720d2",
+    "@theia/keymaps": "1.60.0-next.43+2a13720d2",
+    "@theia/markers": "1.60.0-next.43+2a13720d2",
+    "@theia/memory-inspector": "1.60.0-next.43+2a13720d2",
+    "@theia/messages": "1.60.0-next.43+2a13720d2",
+    "@theia/metrics": "1.60.0-next.43+2a13720d2",
+    "@theia/mini-browser": "1.60.0-next.43+2a13720d2",
+    "@theia/monaco": "1.60.0-next.43+2a13720d2",
+    "@theia/navigator": "1.60.0-next.43+2a13720d2",
+    "@theia/outline-view": "1.60.0-next.43+2a13720d2",
+    "@theia/output": "1.60.0-next.43+2a13720d2",
+    "@theia/plugin-dev": "1.60.0-next.43+2a13720d2",
+    "@theia/plugin-ext": "1.60.0-next.43+2a13720d2",
+    "@theia/plugin-ext-vscode": "1.60.0-next.43+2a13720d2",
+    "@theia/preferences": "1.60.0-next.43+2a13720d2",
+    "@theia/process": "1.60.0-next.43+2a13720d2",
+    "@theia/property-view": "1.60.0-next.43+2a13720d2",
+    "@theia/remote": "1.60.0-next.43+2a13720d2",
+    "@theia/scm": "1.60.0-next.43+2a13720d2",
+    "@theia/search-in-workspace": "1.60.0-next.43+2a13720d2",
+    "@theia/secondary-window": "1.60.0-next.43+2a13720d2",
+    "@theia/task": "1.60.0-next.43+2a13720d2",
+    "@theia/terminal": "1.60.0-next.43+2a13720d2",
+    "@theia/timeline": "1.60.0-next.43+2a13720d2",
+    "@theia/toolbar": "1.60.0-next.43+2a13720d2",
+    "@theia/typehierarchy": "1.60.0-next.43+2a13720d2",
+    "@theia/userstorage": "1.60.0-next.43+2a13720d2",
+    "@theia/variable-resolver": "1.60.0-next.43+2a13720d2",
+    "@theia/vsx-registry": "1.60.0-next.43+2a13720d2",
+    "@theia/workspace": "1.60.0-next.43+2a13720d2",
     "fs-extra": "^9.0.1",
-    "theia-ide-product-ext": "1.59.2"
+    "theia-ide-product-ext": "1.60.0"
   },
   "devDependencies": {
-    "@theia/cli": "1.59.0",
-    "@theia/native-webpack-plugin": "1.59.0"
+    "@theia/cli": "1.60.0-next.43+2a13720d2",
+    "@theia/native-webpack-plugin": "1.60.0-next.43+2a13720d2"
   },
   "scripts": {
     "clean": "theia clean && rimraf node_modules",
