Update to Theia 1.60.0
Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/theia-extensions/product/package.json
+++ b/theia-extensions/product/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
   "name": "theia-ide-product-ext",
-  "version": "1.60.0",
+  "version": "1.60.1",
   "description": "Eclipse Theia IDE Product Branding",
   "dependencies": {
-    "@theia/core": "1.60.0-next.47+9332521b9",
-    "@theia/getting-started": "1.60.0-next.47+9332521b9",
-    "@theia/vsx-registry": "1.60.0-next.47+9332521b9",
-    "@theia/workspace": "1.60.0-next.47+9332521b9",
+    "@theia/core": "1.60.0",
+    "@theia/getting-started": "1.60.0",
+    "@theia/vsx-registry": "1.60.0",
+    "@theia/workspace": "1.60.0",
     "inversify": "^6.0.1"
   },
   "devDependencies": {
