--- a/theia-extensions/updater/package.json
+++ b/theia-extensions/updater/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
   "name": "theia-ide-updater-ext",
-  "version": "1.60.0",
+  "version": "1.60.1",
   "description": "Eclipse Theia IDE Updater",
   "dependencies": {
-    "@theia/core": "1.60.0-next.47+9332521b9",
-    "@theia/output": "1.60.0-next.47+9332521b9",
-    "@theia/preferences": "1.60.0-next.47+9332521b9",
+    "@theia/core": "1.60.0",
+    "@theia/output": "1.60.0",
+    "@theia/preferences": "1.60.0",
     "electron-log": "^4.3.0",
     "electron-updater": "5.3.0",
     "fs-extra": "^10.0.0",
