Add google-ai package
Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/applications/browser/package.json
+++ b/applications/browser/package.json
@@ -52,6 +52,7 @@
     "@theia/ai-chat-ui": "1.60.0",
     "@theia/ai-code-completion": "1.60.0",
     "@theia/ai-core": "1.60.0",
+    "@theia/ai-google": "1.60.0",
     "@theia/ai-history": "1.60.0",
     "@theia/ai-huggingface": "1.60.0",
     "@theia/ai-ide": "1.60.0",
